fix : chart not visible en reload if viewport height are not full screen

--- a/src/styles/charts/_charts.scss
+++ b/src/styles/charts/_charts.scss
@@ -47,13 +47,14 @@
   height: 265px;
 
   @media screen and (max-width: 1430px) {
-   height: auto;
-   justify-content: center;
-   gap: 20px;
+    height: auto;
+    justify-content: center;
+    gap: 20px;
   }
 
   .lineChart {
     position: relative;
+    height: 265px;
     width: clamp(260px, calc(100% / 4), 360px);
     display: flex;
     background: #ff0000;
@@ -75,6 +76,7 @@
 
   .radialChart {
     position: relative;
+    height: 265px;
     width: clamp(260px, calc(100% / 4), 360px);
     background: #fbfbfb;
     border-radius: 5px;
@@ -115,6 +117,7 @@
 
   .radarChart {
     position: relative;
+    height: 265px;
     width: clamp(260px, calc(100% / 4), 360px);
     background: #282d30;
     border-radius: 5px;
